# sameboy-thumbnailer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindSameBoy.cmake  FindSameBoyBootRom.cmake  FindSameBoyTemplate.cmake  Findlibpng.cmake  Findlodepng.cmake
src/: CMakeLists.txt  common.c  common.h  embed.h  get_image_for_rom.c  get_image_for_rom.h  image.c  image.h  main.c
src/png/: CMakeLists.txt
